[package]
name = "git-issue"
description = "Git command to automatically create commit message templates and optionally branches from issues."
version = "9999.0.0"

readme = "README.md"
repository = "https://github.com/move-z/git-issue"
authors = ["Rodolfo Boer"]
license = "GPL-3.0-or-later"

keywords = ["git"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
clap = { version = "3.2.16", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
rpassword = "7.0.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"

[profile.release]
lto = true
strip = true
panic = "abort"
