[package]
name = "git-issue"
description = "Git command to automatically create commit message templates and optionally branches from issues."
version = "0.2.2"

readme = "README.md"
repository = "https://github.com/move-z/git-issue"
authors = ["Rodolfo Boer"]
license = "GPL-3.0-or-later"

keywords = ["git"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
rpassword = "7.2.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

[profile.release]
lto = true
strip = true
panic = "abort"
