[package]
name = "git-issue"
description = "Git command to automatically create commit message templates and optionally branches from issues."
version = "0.3.1"

readme = "README.md"
repository = "https://github.com/move-z/git-issue"
authors = ["Rodolfo Boer"]
license = "GPL-3.0-or-later"

keywords = ["git"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.5.16", features = ["derive"] }
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
rpassword = "7.2.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

[profile.release]
lto = true
strip = true
panic = "abort"
